# music

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  DartConfiguration.tcl  README.md  ecm_uninstall.cmake  liri-music.pro  liri-music.qbs  musicparent.pro
cmake/Modules/: FindLibraryWithDebug.cmake  FindTaglib.cmake
res/: com.liri.music.desktop
src/: CMakeLists.txt  README.md  main.cpp  main.qml  musicfolders.cpp  musicfolders.h  qml.qrc  src.pro  src.qbs  utilities.cpp  utilities.h
src/Components/Albums/: album.cpp  album.h  albumartprovider.cpp  albummodel.cpp  albummodel.h  albumobject.h
src/Components/Artists/: artist.cpp  artist.h  artistmodel.cpp  artistmodel.h  artistobject.h
src/Components/Base/: base.cpp  base.cpp.autosave  base.h
src/Components/LiriMusic/: lirimusic.cpp  lirimusic.h
src/Components/Settings/: settingobject.cpp  settingobject.h
src/Components/Songs/: song.cpp  song.h  songmodel.cpp  songmodel.h  songobject.h
src/Components/Utilities/: database.h  musicdatabase.cpp  musicdatabase.h  musicfolders.h  musicscanner.cpp  musicscanner.cpp.autosave  musicscanner.h  schema.h  tpicture.h  utilities.cpp  utilities.h
src/Frontend/AudioControls/: AudioControls.qml
src/Frontend/Content/Albums/: Album.qml  AlbumTile.qml  AllAlbums.qml  MultiAlbum.qml
src/Frontend/Content/AllSongs/: AllSongs.qml
src/Frontend/Content/Artists/: AllArtists.qml  Artist.qml  ArtistTile.qml
src/Frontend/Content/Common/: ImageTile.qml
src/Frontend/Content/Settings/: Settings.qml
